updated chats page

--- a/chats.html
+++ b/chats.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <head>
     <link rel="stylesheet" href="./css/style.css">
-    <title>Friends</title>
+    <title>Chats</title>
 </head>
 <body>
     <div class="status-bar">
@@ -21,7 +21,7 @@
 	</div>
 
     <div class="top__navigator">
-        <div class="top__navigator__column">Friends</div>
+        <div class="top__navigator__column">Chats</div>
         <div class="top__navigator__column">
             <i class="fas fa-search"></i>
             <i class="fas fa-music"></i>
@@ -29,46 +29,50 @@
         </div>
     </div>
 
-    <div class="top__sub__navigator">
-        <div class="top__sub__navigator__icon"></div>
-        <div>Find your friends</div>
-    </div>
-
-    <main class="main__profile">
-        <img src="./img/profile.PNG" class="main__profile__img" />
-        <div class="main__profile__name">HJ-KIM</div>
-    </main>
-    <div class="friends-bar">
-        <div class="friends-bar__text">
-            <div class="friends-bar__text__icon"></div>
-            <div>Friends</div>
+    <main class="chat__list">
+        <a href="chat-hj.html">
+        <div class="chat__list__chat">
+            <img src="./img/profile.PNG" />
+            <div class="chat">
+                <div class="chat__info">
+                <div>HJ-KIM</div>
+                <div>Hi!</div>
+                </div>
+                <div class="chat__time">
+                    <div>20:01</div>
+                    <div id="alram">1</div>
+                </div>
             </div>
-        <i class="fas fa-sort-down"></i>
-    </div>
-
-
-    <div class="friends__list">
-    <main class="main__profile ">
-        <img src="./img/f1.PNG" class="main__profile__img" />
-        <div class="main__profile__name">Shin</div>
+        </div> </a>
+   
+        <div class="chat__list__chat">
+            <img src="./img/f1.PNG" />
+            <div class="chat">
+                <div class="chat__info">
+                <div>Shin</div>
+                <div>Whats Up?</div>
+                </div>
+                <div class="chat__time">
+                    <div>18:45</div>
+                    <div id="alram">3</div>
+                </div>
+            </div>
+        </div>
+    
+        <div class="chat__list__chat">
+            <img src="./img/f3.PNG" />
+            <div class="chat">
+                <div class="chat__info">
+                <div>Angella</div>
+                <div>Good moring, Sunshine:)</div>
+                </div>
+                <div class="chat__time">
+                    <div>08:32</div>
+                    <div id="alram">1</div>
+                </div>
+            </div>
+        </div>
     </main>
-    <main class="main__profile ">
-        <img src="./img/f2.PNG" class="main__profile__img" />
-        <div class="main__profile__name">foxy-fox</div>
-    </main>
-    <main class="main__profile ">
-        <img src="./img/f3.PNG" class="main__profile__img" />
-        <div class="main__profile__name">Angella</div>
-    </main>
-    <main class="main__profile ">
-        <img src="./img/f4.PNG" class="main__profile__img" />
-        <div class="main__profile__name">moo</div>
-    </main>
-    <main class="main__profile ">
-        <img src="./img/f5.PNG" class="main__profile__img" />
-        <div class="main__profile__name">Jenn</div>
-    </main>
-</div>
 
 <nav class="nav">
     <ul class="nav__list">
