--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="eng">
 <head>
     <link rel="stylesheet" href="./css/style.css">
+    <title>Welcome.</title>
 </head>
 <body>
     <div class="status-bar">
