updated chat parts
chatting w/ other people and input area.

--- a/chat-angella.html
+++ b/chat-angella.html
@@ -22,7 +22,7 @@
 
     <nav class="chat__nav">
         <div class="chat__nav__column"><a href="chats.html"><i class="fas fa-chevron-left"></i></a></div>
-        <div class="chat__nav__column">HJ-KIM</div>
+        <div class="chat__nav__column">Angella</div>
         <div class="chat__nav__column">
             <i class="fas fa-search"></i><i class="fas fa-bars"></i>
         </div>
@@ -33,28 +33,24 @@
     </div>
    
     <main class="main__chatting">
-        <div class="main__chatting__other">
-            <img src="./img/profile.PNG">
-            <div class="main__chatting__other__text">
-                <div>HJ-KIM</div>
-                <div>your new account has been created</div>
-            </div>
-            <div class="main__chatting__other__time">20:01</div>
+
+        <div class="main__chatting__me">
+            <div class="main__chatting__me__time">00:46</div>
+            <div class="main__chatting__me__text">Hey,how've u been?</div>
         </div>
 
-        
+        <div class="main__chatting__other">
+            <img src="./img/f3.PNG">
+            <div class="main__chatting__other__text">
+                <div>Angella</div>
+                <div>Good mornig, Sunshine:)</div>
+            </div>
+            <div class="main__chatting__other__time">08:32</div>
+        </div>
+
     </main>
   
-    <div class="typing">
-        <i class="fas fa-plus-circle"></i>
-        <form>
-            <input type="text" class="typing__input"/>
-            <div class="typing__icons">
-                <i class="far fa-smile"></i>
-                <i class="fas fa-arrow-up"></i>
-            </div>
-        </form> 
-    </div>
+
 
 
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
