--- a/chat-shin.html
+++ b/chat-shin.html
@@ -22,7 +22,7 @@
 
     <nav class="chat__nav">
         <div class="chat__nav__column"><a href="chats.html"><i class="fas fa-chevron-left"></i></a></div>
-        <div class="chat__nav__column">HJ-KIM</div>
+        <div class="chat__nav__column">Shin</div>
         <div class="chat__nav__column">
             <i class="fas fa-search"></i><i class="fas fa-bars"></i>
         </div>
@@ -34,27 +34,29 @@
    
     <main class="main__chatting">
         <div class="main__chatting__other">
-            <img src="./img/profile.PNG">
+            <img src="./img/f1.PNG">
             <div class="main__chatting__other__text">
-                <div>HJ-KIM</div>
-                <div>your new account has been created</div>
+                <div>Shin</div>
+                <div>Hey, WhatsUp?</div>
             </div>
-            <div class="main__chatting__other__time">20:01</div>
+            <div class="main__chatting__other__time">18:03</div>
         </div>
 
-        
+        <div class="main__chatting__me">
+            <div class="main__chatting__me__time">18:32</div>
+            <div class="main__chatting__me__text">home works:(</div>
+        </div>
+        <div class="main__chatting__other">
+            <img src="./img/f1.PNG">
+            <div class="main__chatting__other__text">
+                <div>Shin</div>
+                <div>Okay..hit me later</div>
+            </div>
+            <div class="main__chatting__other__time">18:35</div>
+        </div>
     </main>
   
-    <div class="typing">
-        <i class="fas fa-plus-circle"></i>
-        <form>
-            <input type="text" class="typing__input"/>
-            <div class="typing__icons">
-                <i class="far fa-smile"></i>
-                <i class="fas fa-arrow-up"></i>
-            </div>
-        </form> 
-    </div>
+
 
 
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
