--- a/chats.html
+++ b/chats.html
@@ -36,7 +36,7 @@
             <div class="chat">
                 <div class="chat__info">
                 <div>HJ-KIM</div>
-                <div>Hi!</div>
+                <div>your new account has been created</div>
                 </div>
                 <div class="chat__time">
                     <div>20:01</div>
@@ -44,21 +44,23 @@
                 </div>
             </div>
         </div> </a>
-   
+        
+        <a href="chat-shin.html">
         <div class="chat__list__chat">
             <img src="./img/f1.PNG" />
             <div class="chat">
                 <div class="chat__info">
                 <div>Shin</div>
-                <div>Whats Up?</div>
+                <div>Okay..hit me later</div>
                 </div>
                 <div class="chat__time">
-                    <div>18:45</div>
+                    <div>18:35</div>
                     <div id="alram">3</div>
                 </div>
             </div>
-        </div>
-    
+        </div></a>
+
+        <a href="chat-angella.html">
         <div class="chat__list__chat">
             <img src="./img/f3.PNG" />
             <div class="chat">
@@ -71,8 +73,10 @@
                     <div id="alram">1</div>
                 </div>
             </div>
-        </div>
+        </div></a>
+
     </main>
+
 
 <nav class="nav">
     <ul class="nav__list">
