updated splash screen and mediaquery

--- a/index.html
+++ b/index.html
@@ -36,6 +36,25 @@
         <a href="friends.html"><div>Start</div></a>
    </div>
 
+<div class="no-mobile">
+	<span> Make your screen smaller
+    </span>
+</div>
+
+
+<div id="splash-screen">
+    <div class="splash-screen__icons">
+    <div class="more__app__info__icon"></div>
+   <div class="splash-screen__roading">
+            <div class="roading_icons"></div>
+            <div class="roading_icons"></div>
+            <div class="roading_icons"></div>
+        
+    </div>
+</div>
+</div>
+
+
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
