--- a/chat-angella.html
+++ b/chat-angella.html
@@ -50,6 +50,16 @@
 
     </main>
   
+    <div class="typing">
+        <i class="fas fa-plus-circle"></i>
+        <form>
+            <input type="text" class="typing__input"/>
+            <div class="typing__icons">
+                <i class="far fa-smile"></i>
+                <i class="fas fa-arrow-up"></i>
+            </div>
+        </form> 
+    </div>
 
 
 
